{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 632,
  "lineage": "5fd25717-a37a-87c4-a7ee-45e052cdf5d6",
  "resources": [
    {
      "module": "module.db_auth",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20240515",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/lptsi-progetto-arrighi/zones/us-central1-a/disks/db-auth"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/lptsi-progetto-arrighi/zones/us-central1-a/instances/db-auth",
            "instance_id": "3201000585775139361",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "startup-script-url": "gs://progetto_mysql_scripts/startup_script_mysql_auth.sh"
            },
            "metadata_fingerprint": "PTp47mNnXhY=",
            "name": "db-auth",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.30.167.114",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/lptsi-progetto-arrighi/global/networks/app-server-vpc-network",
                "network_ip": "10.128.0.29",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/lptsi-progetto-arrighi/regions/us-central1/subnetworks/app-server-vpc-network",
                "subnetwork_project": "lptsi-progetto-arrighi"
              }
            ],
            "project": "lptsi-progetto-arrighi",
            "scheduling": [
              {
                "automatic_restart": false,
                "instance_termination_action": "STOP",
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true,
                "provisioning_model": "SPOT"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/lptsi-progetto-arrighi/zones/us-central1-a/instances/db-auth",
            "service_account": [
              {
                "email": "751627714761-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web"
            ],
            "tags_fingerprint": "3d9fNIIa_10=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.db_data",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20240515",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/lptsi-progetto-arrighi/zones/us-central1-a/disks/db-data"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/lptsi-progetto-arrighi/zones/us-central1-a/instances/db-data",
            "instance_id": "579153309058845217",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "startup-script-url": "gs://progetto_mysql_scripts/startup_script_mysql_data.sh"
            },
            "metadata_fingerprint": "a-VcuYhJzQg=",
            "name": "db-data",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.70.51.108",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/lptsi-progetto-arrighi/global/networks/app-server-vpc-network",
                "network_ip": "10.128.0.30",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/lptsi-progetto-arrighi/regions/us-central1/subnetworks/app-server-vpc-network",
                "subnetwork_project": "lptsi-progetto-arrighi"
              }
            ],
            "project": "lptsi-progetto-arrighi",
            "scheduling": [
              {
                "automatic_restart": false,
                "instance_termination_action": "STOP",
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true,
                "provisioning_model": "SPOT"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/lptsi-progetto-arrighi/zones/us-central1-a/instances/db-data",
            "service_account": [
              {
                "email": "751627714761-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web"
            ],
            "tags_fingerprint": "3d9fNIIa_10=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internaltraffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2024-06-02T05:50:09.450-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lptsi-progetto-arrighi/global/firewalls/allow-internal-traffic",
            "log_config": [],
            "name": "allow-internal-traffic",
            "network": "https://www.googleapis.com/compute/v1/projects/lptsi-progetto-arrighi/global/networks/app-server-vpc-network",
            "priority": 1000,
            "project": "lptsi-progetto-arrighi",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lptsi-progetto-arrighi/global/firewalls/allow-internal-traffic",
            "source_ranges": [
              "10.128.0.0/9"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-06-02T05:50:09.533-07:00",
            "deny": [],
            "description": "Creates firewall rule targeting tagged instances",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lptsi-progetto-arrighi/global/firewalls/appserver-firewall-rule",
            "log_config": [],
            "name": "appserver-firewall-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/lptsi-progetto-arrighi/global/networks/app-server-vpc-network",
            "priority": 1000,
            "project": "lptsi-progetto-arrighi",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lptsi-progetto-arrighi/global/firewalls/appserver-firewall-rule",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-health-check",
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private-ip-block",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.13.32.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2024-06-02T05:50:09.550-07:00",
            "id": "projects/lptsi-progetto-arrighi/global/addresses/private-ip-block",
            "name": "private-ip-block",
            "network": "https://www.googleapis.com/compute/v1/projects/lptsi-progetto-arrighi/global/networks/app-server-vpc-network",
            "prefix_length": 20,
            "project": "lptsi-progetto-arrighi",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lptsi-progetto-arrighi/global/addresses/private-ip-block"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/lptsi-progetto-arrighi/global/networks/app-server-vpc-network",
            "mtu": 0,
            "name": "app-server-vpc-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1296665584842000131",
            "project": "lptsi-progetto-arrighi",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lptsi-progetto-arrighi/global/networks/app-server-vpc-network"
          }
        }
      ]
    }
  ]
}